# sparse_store

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/sparse_store/: __init__.py  backup_command.py  config.py  init_command.py  log.py  main.py  path.py  restore_command.py  store.py  verbosity.py
tests/: conftest.py  test_init_command.py  test_path.py  test_sparse_store.py  test_store.py  test_yaml.py
